added kotter as dependency